UI and implimentation changes
